--- a/jk/index.html
+++ b/jk/index.html
@@ -23,7 +23,7 @@
 				url: url,
 				type: "GET",
 				headers: {
-					"Authorization": "NTcxNjk1NjUzNDk5OTYxMzU2.Yhb0uA.GA9yts5LHdxWQIa6h8kWH8GV8Bo"
+					"Authorization": "MTA5NjI2MjU3NTYwNTQyMDA0Mg.Gu6Hbc.Q3oSk5hKD2AYM36PcJA4ojVlrtjMlWhT7ot93o"
 				},
 				success: function(data) {
     var username = data.username + "#" + data.discriminator;
