--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Hate | Camel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="h8.LOL">
+	<meta property="og:title" content="H8.LOL">
     <meta property="og:description" content="Private Biolink Service!">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1059291534626922568/1099171755341389934/favi.png">
     <meta property="og:url" content="https://h8.lol">
